--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ o888bood8P'   `Y8bod8P' `Y8bod88P" o888o `Y8bod8P' `Y888""8o   "888" o888o `Y8bo
         <div class="prompt">HORNY DEVIL PROTOCOLS:</div>
         <div class="links">
             <a href="https://x.com/devil_horny__">> X</a><br>
-            <a href="https://pump.fun/">> Pumpfun</a><br>
-            <a href="https://t.me/devilhornyy">> Telegram</a><br>
+            <a href="https://pump.fun/profile/AJ6uoxvjrihHzwYHJQmRiGk9qsx96ymu8fktUzhgR7Ng">> Pumpfun</a><br>
+            <a href="https://t.me/dedicationncoin">> Telegram</a><br>
         </div>
 
     </div>
